--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styls/blog.css">
+    
 </head>
 <body>
-    
+  <div>
+    <h3>My first website</h3>
+    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, iste? Ipsa officia, possimus voluptate recusandae, unde repellendus consequuntur eaque blanditiis ullam quam cumque porro harum at libero delectus, error excepturi!</P>
+  </div>  
 </body>
 </html>
