--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
   <div>
     <h3>My first website</h3>
     <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium, iste? Ipsa officia, possimus voluptate recusandae, unde repellendus consequuntur eaque blanditiis ullam quam cumque porro harum at libero delectus, error excepturi!</P>
-  </div>  
+  </div> 
+  <div>
+    <h3>second paragraph</h3>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid soluta dolor autem minus suscipit libero? Optio quaerat cum enim commodi magni, iusto assumenda aperiam tempora quasi laboriosam blanditiis nesciunt asperiores?
+  </div> 
+  <div>
+    <h3>third paragraph</h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat nesciunt illo nihil maxime culpa explicabo vero quidem. Architecto quis culpa praesentium expedita autem provident, sit quo fugit maxime ipsa.
+</div>
+<div>
+    <h3>how to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message</li>
+        <li>git push</li>
+    </ul>
+</div>
 </body>
 </html>
